[gd_scene load_steps=16 format=2]

[ext_resource path="res://Setup.gd" type="Script" id=1]
[ext_resource path="res://PresetButtonGroup.tres" type="ButtonGroup" id=2]
[ext_resource path="res://Palette.png" type="Texture" id=3]
[ext_resource path="res://Palette2.png" type="Texture" id=4]
[ext_resource path="res://PaletteButtonGroup.tres" type="ButtonGroup" id=5]
[ext_resource path="res://Palette3.png" type="Texture" id=6]
[ext_resource path="res://font/Courgette-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://MainFont.tres" type="DynamicFont" id=8]
[ext_resource path="res://font/Open Sans/OpenSans-VariableFont_wdth,wght.ttf" type="DynamicFontData" id=9]

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.2, 0.227451, 0.309804, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.168627, 0.192157, 0.25098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="DynamicFont" id=5]
size = 12
extra_spacing_top = -5
extra_spacing_bottom = -4
font_data = ExtResource( 9 )

[sub_resource type="DynamicFont" id=6]
extra_spacing_top = -5
font_data = ExtResource( 9 )

[node name="Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 1024.0
color = Color( 0.12549, 0.141176, 0.192157, 1 )

[node name="Main" type="VBoxContainer" parent="."]
margin_left = 256.0
margin_right = 512.0
margin_bottom = 512.0
grow_horizontal = 2
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="Title" type="Label" parent="Main"]
margin_top = 113.0
margin_right = 256.0
margin_bottom = 194.0
custom_fonts/font = SubResource( 4 )
text = "Lenia"
align = 1

[node name="S0" type="Control" parent="Main"]
margin_top = 198.0
margin_right = 256.0
margin_bottom = 238.0
rect_min_size = Vector2( 0, 40 )

[node name="Start" type="Button" parent="Main"]
margin_top = 242.0
margin_right = 256.0
margin_bottom = 264.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Start"

[node name="S1" type="Control" parent="Main"]
margin_top = 268.0
margin_right = 256.0
margin_bottom = 278.0
rect_min_size = Vector2( 0, 10 )

[node name="Settings" type="Button" parent="Main"]
margin_top = 282.0
margin_right = 256.0
margin_bottom = 304.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Settings"

[node name="S2" type="Control" parent="Main"]
margin_top = 308.0
margin_right = 256.0
margin_bottom = 318.0
rect_min_size = Vector2( 0, 10 )

[node name="Controls" type="Button" parent="Main"]
margin_top = 322.0
margin_right = 256.0
margin_bottom = 344.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Controls"

[node name="S3" type="Control" parent="Main"]
margin_top = 348.0
margin_right = 256.0
margin_bottom = 358.0
rect_min_size = Vector2( 0, 10 )

[node name="Quit" type="Button" parent="Main"]
margin_top = 362.0
margin_right = 256.0
margin_bottom = 384.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Quit"

[node name="S4" type="Control" parent="Main"]
margin_top = 388.0
margin_right = 256.0
margin_bottom = 398.0
rect_min_size = Vector2( 0, 10 )

[node name="Settings" type="VBoxContainer" parent="."]
visible = false
margin_left = 128.0
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="Label" type="Label" parent="Settings"]
margin_top = 35.0
margin_right = 384.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 8 )
text = "Seed: 0"
align = 1

[node name="HSlider" type="HSlider" parent="Settings"]
margin_top = 55.0
margin_right = 384.0
margin_bottom = 71.0
focus_mode = 0
custom_styles/slider = SubResource( 3 )
custom_styles/grabber_area_highlight = SubResource( 2 )
custom_styles/grabber_area = SubResource( 1 )
max_value = 10000.0

[node name="CheckButton" type="CheckButton" parent="Settings"]
margin_top = 75.0
margin_right = 384.0
margin_bottom = 115.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
text = "Randomize Seed"
align = 1

[node name="S3" type="Control" parent="Settings"]
margin_top = 119.0
margin_right = 384.0
margin_bottom = 179.0
rect_min_size = Vector2( 0, 60 )

[node name="PresetsLabel" type="Label" parent="Settings"]
margin_top = 183.0
margin_right = 384.0
margin_bottom = 199.0
custom_fonts/font = ExtResource( 8 )
text = "Presets"
align = 1

[node name="Presets" type="HBoxContainer" parent="Settings"]
margin_top = 203.0
margin_right = 384.0
margin_bottom = 227.0
custom_constants/separation = 70
alignment = 1

[node name="Group0" type="CheckBox" parent="Settings/Presets"]
margin_left = 2.0
margin_right = 54.0
margin_bottom = 24.0
focus_mode = 0
group = ExtResource( 2 )
text = "      "

[node name="Group1" type="CheckBox" parent="Settings/Presets"]
margin_left = 124.0
margin_right = 160.0
margin_bottom = 24.0
focus_mode = 0
group = ExtResource( 2 )
text = "  "

[node name="Group2" type="CheckBox" parent="Settings/Presets"]
margin_left = 230.0
margin_right = 254.0
margin_bottom = 24.0
focus_mode = 0
group = ExtResource( 2 )

[node name="Group3" type="CheckBox" parent="Settings/Presets"]
margin_left = 324.0
margin_right = 382.0
margin_bottom = 24.0
focus_mode = 0
custom_fonts/font = SubResource( 5 )
pressed = true
group = ExtResource( 2 )
text = "None"

[node name="S4" type="Control" parent="Settings"]
margin_top = 231.0
margin_right = 384.0
margin_bottom = 291.0
rect_min_size = Vector2( 0, 60 )

[node name="PaletteLabel" type="Label" parent="Settings"]
margin_top = 295.0
margin_right = 384.0
margin_bottom = 311.0
custom_fonts/font = ExtResource( 8 )
text = "Palette"
align = 1

[node name="Palette" type="HBoxContainer" parent="Settings"]
margin_top = 315.0
margin_right = 384.0
margin_bottom = 339.0
custom_constants/separation = 70
alignment = 1

[node name="Palette0" type="CheckBox" parent="Settings/Palette"]
margin_left = 2.0
margin_right = 82.0
margin_bottom = 24.0
focus_mode = 0
pressed = true
group = ExtResource( 5 )
text = "             "

[node name="TextureRect" type="TextureRect" parent="Settings/Palette/Palette0"]
margin_left = 30.0
margin_top = 4.0
margin_right = 110.0
margin_bottom = 20.0
texture = ExtResource( 3 )
stretch_mode = 1

[node name="Palette1" type="CheckBox" parent="Settings/Palette"]
margin_left = 152.0
margin_right = 232.0
margin_bottom = 24.0
focus_mode = 0
group = ExtResource( 5 )
text = "             "

[node name="TextureRect" type="TextureRect" parent="Settings/Palette/Palette1"]
margin_left = 30.0
margin_top = 4.0
margin_right = 110.0
margin_bottom = 20.0
texture = ExtResource( 4 )
stretch_mode = 1

[node name="Palette2" type="CheckBox" parent="Settings/Palette"]
margin_left = 302.0
margin_right = 382.0
margin_bottom = 24.0
focus_mode = 0
group = ExtResource( 5 )
text = "             "

[node name="TextureRect" type="TextureRect" parent="Settings/Palette/Palette2"]
margin_left = 30.0
margin_top = 4.0
margin_right = 110.0
margin_bottom = 20.0
texture = ExtResource( 6 )
stretch_mode = 1

[node name="S5" type="Control" parent="Settings"]
margin_top = 343.0
margin_right = 384.0
margin_bottom = 363.0
rect_min_size = Vector2( 0, 20 )

[node name="Lerping" type="CheckButton" parent="Settings"]
margin_top = 367.0
margin_right = 384.0
margin_bottom = 407.0
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Lerping (Has flashing lights)"
align = 1

[node name="S6" type="Control" parent="Settings"]
margin_top = 411.0
margin_right = 384.0
margin_bottom = 451.0
rect_min_size = Vector2( 0, 40 )

[node name="HBoxContainer" type="HBoxContainer" parent="Settings"]
margin_top = 455.0
margin_right = 384.0
margin_bottom = 477.0
alignment = 1

[node name="BackToMain" type="Button" parent="Settings/HBoxContainer"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 22.0
rect_min_size = Vector2( 256, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Back"

[node name="Controls" type="VBoxContainer" parent="."]
visible = false
margin_left = 128.0
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 2, 2 )
alignment = 1

[node name="Label" type="Label" parent="Controls"]
margin_top = 160.0
margin_right = 384.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 6 )
text = "Mouse Left - Draw
Mouse Right - Erase
P - Pause
Esc - Return to title


Settings are recommended.
"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Controls"]
margin_top = 329.0
margin_right = 384.0
margin_bottom = 351.0
alignment = 1

[node name="BackToMain" type="Button" parent="Controls/HBoxContainer"]
margin_left = 64.0
margin_right = 320.0
margin_bottom = 22.0
rect_min_size = Vector2( 256, 0 )
focus_mode = 0
custom_fonts/font = ExtResource( 8 )
enabled_focus_mode = 0
text = "Back"

[node name="CanvasModulate" type="CanvasModulate" parent="."]

[connection signal="pressed" from="Main/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="Main/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Main/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="Main/Quit" to="." method="_on_Quit_pressed"]
[connection signal="value_changed" from="Settings/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="Settings/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="toggled" from="Settings/Presets/Group0" to="." method="_on_Group0_toggled"]
[connection signal="toggled" from="Settings/Presets/Group1" to="." method="_on_Group1_toggled"]
[connection signal="toggled" from="Settings/Presets/Group2" to="." method="_on_Group2_toggled"]
[connection signal="toggled" from="Settings/Presets/Group3" to="." method="_on_Group3_toggled"]
[connection signal="toggled" from="Settings/Palette/Palette0" to="." method="_on_Palette0_toggled"]
[connection signal="toggled" from="Settings/Palette/Palette1" to="." method="_on_Palette1_toggled"]
[connection signal="toggled" from="Settings/Palette/Palette2" to="." method="_on_Palette2_toggled"]
[connection signal="toggled" from="Settings/Lerping" to="." method="_on_Lerping_toggled"]
[connection signal="pressed" from="Settings/HBoxContainer/BackToMain" to="." method="_on_BackToMain_pressed"]
[connection signal="pressed" from="Controls/HBoxContainer/BackToMain" to="." method="_on_BackToMain_pressed"]
